--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,5 @@
 site:
-  name: AstroWind
+  name: 营养食谱
   site: 'https://astrowind.vercel.app'
   base: '/'
   trailingSlash: false
@@ -9,14 +9,14 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: 营养食谱
+    template: '%s | 营养食谱'
+  description: "适合各种人群的营养食谱"
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: 营养食谱
     images:
       - url: '~/assets/images/default.png'
         width: 1200
